--- a/css/index.css
+++ b/css/index.css
@@ -34,8 +34,8 @@ a {
 }
 
 .column {
-  width: 350px;
-  margin: 20px auto 0;
+  width: 300px;
+  margin: 20px 0 0 0;
   order: 1;
   line-height: 0.9;
 }
