--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 body {
   box-sizing: border-box;
   margin: 0;
-  font-family: "Helvetica Neue"; /* helvetica has less consistent kerning */
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   background-color: var(--black);
   color: var(--red);
   font-size: 22px;
